@@ -217,6 +217,10 @@
 			<!-- Width=###COLUMNWIDTH### -->
 			<td>###HEADERROOM###</td>
 			<!-- ###HEADERCOLUMN### end -->
+			<!-- ###HEADERCOLUMNEMPTY### begin -->
+			<!-- Width=###COLUMNWIDTH### -->
+			<td>&nbsp;</td>
+			<!-- ###HEADERCOLUMNEMPTY### end -->
 		</tr>
 		<!-- ###HEADERROW### end -->
 		<!-- ###SLOTROW### begin -->
@@ -238,7 +242,7 @@
 
 			<!-- ###SLOTCOLUMNEMPTY### begin -->
 			<!-- Width=###COLUMNWIDTH### -->
-			<td class="tx-wseevents-pi1-category-###SLOTCATEGORY###" rowspan="###SLOTSIZE###" colspan="###SLOTWIDTH###"><p title="###SLOTTEASER###">###SLOTNAME###<br />(###SLOTBEGIN### - ###SLOTEND###)</p></td>
+			<td class="tx-wseevents-pi1-category-###SLOTCATEGORY###" rowspan="###SLOTSIZE###" colspan="###SLOTWIDTH###">&nbsp;</td>
 			<!-- ###SLOTCOLUMNEMPTY### end -->
 		</tr>
 		<!-- ###SLOTROW### end -->
